[gd_scene load_steps=4 format=2]

[ext_resource path="res://Theme/GREEN_theme.tres" type="Theme" id=1]
[ext_resource path="res://assets/2d/Camera2D_32.png" type="Texture" id=2]
[ext_resource path="res://Systems/HUD/HUD.gd" type="Script" id=7]

[node name="HUD" type="Control"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -42.2499
margin_bottom = 1.75012
rect_min_size = Vector2( 0, 44 )
mouse_filter = 2
mouse_default_cursor_shape = 16
theme = ExtResource( 1 )
script = ExtResource( 7 )

[node name="hb" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
mouse_default_cursor_shape = 16
alignment = 1

[node name="space0" type="Control" parent="hb"]
margin_right = 1156.0
margin_bottom = 44.0
mouse_filter = 2
mouse_default_cursor_shape = 16
size_flags_horizontal = 3

[node name="cam" type="ToolButton" parent="hb"]
margin_left = 1160.0
margin_right = 1204.0
margin_bottom = 44.0
focus_mode = 0
toggle_mode = true
enabled_focus_mode = 0
icon = ExtResource( 2 )

[node name="Label" type="Label" parent="hb"]
visible = false
margin_left = 1191.0
margin_top = 7.0
margin_right = 1204.0
margin_bottom = 36.0
mouse_default_cursor_shape = 16
text = "|"

[node name="spawn_panel_m" type="ToolButton" parent="hb"]
margin_left = 1208.0
margin_right = 1237.0
margin_bottom = 44.0
hint_tooltip = "m - spawn menu"
focus_mode = 0
enabled_focus_mode = 0
text = "m"

[node name="esc" type="ToolButton" parent="hb"]
margin_left = 1241.0
margin_right = 1280.0
margin_bottom = 44.0
hint_tooltip = "esc - pause menu"
focus_mode = 0
enabled_focus_mode = 0
text = "esc"
align = 0

[connection signal="toggled" from="hb/cam" to="." method="_on_cam_toggled"]
[connection signal="pressed" from="hb/spawn_panel_m" to="." method="_on_spawn_panel_m_pressed"]
[connection signal="pressed" from="hb/esc" to="." method="_on_esc_pressed"]
